[package]
name = "ogg-coverart"
version = "1.0.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.13"
clap = { version = "3", features = ["cargo"] }
jpeg-decoder = { version = "0.2", default-features = false }
png = "0.17"
